--- a/main/views/create.handlebars
+++ b/main/views/create.handlebars
@@ -17,46 +17,46 @@
                 <div class="field">
                   <label class="label has-text-danger">Email</label>
                   <div class="control">
-                    <input class="input" type="email" placeholder="e.g. alex@example.com">
+                    <input class="input" type="email" id="email-signup" placeholder="e.g. alex@example.com">
                   </div>
                 </div>
               
                 <div class="field">
                   <label class="label has-text-danger">Password</label>
                   <div class="control">
-                    <input class="input" type="password" placeholder="********">
+                    <input class="input" type="password" id="password-signup" placeholder="********">
                   </div>
                 </div>
 
                 <div class="field">
                     <label class="label has-text-danger">First Name</label>
                     <div class="control">
-                      <input class="input" type="text" placeholder="Jane">
+                      <input class="input" type="text" id="firstName-signup" placeholder="Jane">
                     </div>
                   </div>
 
                   <div class="field">
                     <label class="label has-text-danger">Last Name</label>
                     <div class="control">
-                      <input class="input" type="text" placeholder="Doe">
+                      <input class="input" type="text" id="lastName-signup" placeholder="Doe">
                     </div>
                   </div>
 
                   <div class="field">
                     <label class="label has-text-danger">Address</label>
                     <div class="control">
-                      <input class="input" type="text" placeholder="123 Main Street">
+                      <input class="input" type="text" id="address-signup"placeholder="123 Main Street">
                     </div>
                   </div>
 
                   <div class="field">
                     <label class="label has-text-danger">Phone Number</label>
                     <div class="control">
-                      <input class="input" type="text" placeholder="(XXX)-XXX-XXXX">
+                      <input class="input" type="text" id="phonenumber" placeholder="(XXX)-XXX-XXXX">
                     </div>
                   </div>
               
-                <button class="button is-danger is-centered">Sign in</button>
+                <button class="button is-danger is-centered">Create</button>
               </form>
           </div>
         </div>
