--- a/main/views/create.handlebars
+++ b/main/views/create.handlebars
@@ -60,6 +60,8 @@
               </form>
           </div>
         </div>
+
+        <script src = '../public/js/signup.js'></script>
       
         <!-- Hero footer: will stick at the bottom -->
         <div class="hero-foot">
