--- a/main/views/create.handlebars
+++ b/main/views/create.handlebars
@@ -6,14 +6,14 @@
         <!-- Hero content: will be in the middle -->
         <div class="hero-body">
           <div class="container has-background-light">
-            <form class="box">
+           
 
                 <div class="has-text-centered">
                     <h1 class="title is-1 has-text-danger">Create Account</h1>
                 </div>
 
                 <br>
-
+               </form class="box">
                 <div class="field">
                   <label class="label has-text-danger">Email</label>
                   <div class="control">
@@ -55,9 +55,10 @@
                       <input class="input" type="text" id="phonenumber" placeholder="(XXX)-XXX-XXXX">
                     </div>
                   </div>
+                  </form>
               
-                <button class="button is-danger is-centered">Create</button>
-              </form>
+                <button class="button is-danger is-centered" type="submit">Create</button>
+              
           </div>
         </div>
 
@@ -67,4 +68,5 @@
         <div class="hero-foot">
         </div>
       </section>
-      <script src = '../public/js/signup.js'></script>
+      
+      <script src = './js/signup.js'></script>
